[package]
name = "cat-proj"
version = "0.1.0"
edition = "2021"

[dependencies]   # 配置管理
mysql_async = "0.25"
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
once_cell = "1.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
actix-web = "4.9.0"
serde_derive = "1.0.217"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rand_core = "0.9.1"
hex = "0.4.3"

